--- a/app/views/guest/test.template.html
+++ b/app/views/guest/test.template.html
@@ -1,10 +1,10 @@
 <div class="container" style="margin-top: 60px;" bs-loading-overlay bs-loading-overlay-delay="200">
 <script src="/javascripts/FileSaver.js"></script>
-	<div>
-  		<input type="file" multiple ng-model="testfile" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="testfile" name ="testfile">
-		<label for="testfile" title="{{tooltips['testfile']}}"><span>No file chosen</span><strong>Open</strong></label>
+	<div id="form-content">
 	</div>
-
+	<p>Đọc file excel</p>
+	<js-xls onread="read" onerror="error"></js-xls>
+	<br>
 	<input type="text" title="{{tooltips['dataFlex']}}" name="dataFlex" class="input-form flexdatalist-force" data-min-length='0' multiple='multiple' ng-model="dataFlex" list="dataFlex">
 	<datalist id="dataFlex">
 	<option value="soHieuBTTNVN">Số hiệu bảo tàng thiên nhiên</option>
