--- a/app/views/modals/exportfile.blade.html
+++ b/app/views/modals/exportfile.blade.html
@@ -2,23 +2,23 @@
   <!-- <h4>Chọn những trường cần trích xuất: </h4> -->
   <h4>Trích xuất những file đã chọn? </h4>
 </div>
-<!-- <div class="modal-body">
+<div class="modal-body">
 	<input type="text" title="{{tooltips['fields']}}" name="fields" class="input-form flexdatalist-force" data-min-length='0' multiple='multiple' ng-model="data.fields" list="fields">
 	<datalist id="fields">
-	<option value="tenVietNam">Tên Việt Nam</option>
-	<option value="tenTiengAnh">Tên Tiếng Anh</option>
-	<option value="maDeTai">Mã đề tài</option>
+		<option ng-repeat="(key, value) in fields" value="{{key}}">{{value}}</option>
 	</datalist>
-</div> -->
+</div>
 <div class="modal-footer">
     <button class="btn btn-success" ng-click="ok()">Trích xuất</button>
     <button class="btn btn-danger" ng-click="cancel()">Huỷ</button>
 </div>
 <script type="text/javascript">
-	$('.flexdatalist-force').flexdatalist({
-		minLength: 0,
-		selectionRequired: true,
-		valuesSeparator: "_-_",
-		valueProperty: "value"
-	});
+	setTimeout(function () {
+		$('.flexdatalist-force').flexdatalist({
+			minLength: 0,
+			selectionRequired: true,
+			valuesSeparator: "_-_",
+			valueProperty: "value"
+		});
+	}, 500)
 </script>
