read data template

--- a/app/views/guest/test.template.html
+++ b/app/views/guest/test.template.html
@@ -2,9 +2,10 @@
 <script src="/javascripts/FileSaver.js"></script>
 	<div id="form-content">
 	</div>
-	<p>Đọc file excel</p>
+	<h3>Test đọc file excel</h3>
 	<js-xls onread="read" onerror="error"></js-xls>
 	<br>
+	<h3>Test trích xuất file</h3>
 	<input type="text" title="{{tooltips['dataFlex']}}" name="dataFlex" class="input-form flexdatalist-force" data-min-length='0' multiple='multiple' ng-model="dataFlex" list="dataFlex">
 	<datalist id="dataFlex">
 	<option value="soHieuBTTNVN">Số hiệu bảo tàng thiên nhiên</option>
