--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -4,6 +4,10 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<tr>
+					<td>Read excel file</td>
+					<td><js-xls onread="read" onerror="error"></js-xls></td>
+				</tr>
+				<tr>
 					<td><label >Mã đề tài  <span class="has-required">(*)</span>: </label></td>
 					<td>
 						<input type="text" name="maDeTai" disabled="true" ng-model="data.maDeTai" class="input-form" required>
